--- a/style.css
+++ b/style.css
@@ -61,7 +61,8 @@ input{
     width: 15%;
     border:3px solid #005daf;
     border-radius: 5px;
-    background-color: #005daf2a;
+    background-color: #001a4a2a;
+    color: white;
 }
 #custom-amount{
     margin-top: 0;
@@ -185,4 +186,29 @@ input{
 }
 .read-more{
     color: white;
+}
+#get-my-updates{
+    color: white;
+    text-align: center;
+}
+#get-my-updates h2{
+font-size: 35px;
+}
+#email-input{
+    margin-top: 50px;
+    background-color: #0a183053;
+    width: 50%;
+    padding: 50px 0px;
+    margin-left: 350px;
+}
+#email-input input{
+padding: 15px 80px;
+border-radius: 10px;
+}
+#email-input button{
+    padding: 15px 20px;
+    color: white;
+    background-color: #92621440;
+    border: 2px solid #926214;
+    border-radius: 8px;
 }
